# movies_reserv_api

./: .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
alembic/versions/: 2ae39a21f633_implemented_session_and_seats_for_movies.py  6c6b20411d15_implemented_movies_table.py  8da7d5b0a905_first_commit_with_first_table_users.py  a10fb3020e43_implemented_session_and_seats_for_movies.py
app/: context.py  database.py  main.py  models.py  schemas.py  security.py  settings.py
app/routers/: auth.py  movies.py  rooms.py  sessions.py  users.py
