[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme Almeida",email = "gvba.1999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "tzdata (>=2025.3,<2026.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.13,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "freezegun (>=1.5.5,<2.0.0)",
    "faker (>=40.1.2,<41.0.0)",
    "testcontainers (>=4.14.1,<5.0.0)",
    "opentelemetry-distro (>=0.48b0,<1.0.0)",
    "opentelemetry-exporter-otlp-proto-grpc (>=1.27.0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.48b0,<1.0.0)",
    "opentelemetry-instrumentation-sqlalchemy (>=0.48b0,<1.0.0)",
    "opentelemetry-instrumentation-psycopg (>=0.48b0,<1.0.0)",
    "opentelemetry-instrumentation-logging (>=0.60b1,<0.61)",
    "opentelemetry-exporter-otlp (>=1.39.1,<2.0.0)",
    "opentelemetry-sdk (>=1.39.1,<2.0.0)",
]


[tool.ruff]
line-length = 88
extend-exclude = ['migrations','alembic']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.pytest.ini_options]
pythonpath = '.'
asyncio_default_fixture_loop_scope = 'function'

[tool.coverage.run]
core = "ctrace"
concurrency = ["thread", "greenlet"]


[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
#run = 'fastapi dev app/main.py'
run = 'uvicorn app.main:app --log-level info'
pre_test = 'task lint'
test = 'pytest -s -x --cov=app -vv'
post_test = "coverage html"
otel-install = 'opentelemetry-bootstrap -a install'

[tool.taskipy]
envfile = '.env'
